# cli

./: .gitignore  Cargo.toml  Makefile  README.md  index.js
crates/ks_cli/: Cargo.toml  README.md
crates/ks_cli_bin/: Cargo.toml  README.md
src/: command.rs  constants.rs  main.rs  util.rs
src/command/: configure.rs  run.rs
src/commands/: add.rs  configure.rs  mod.rs  run.rs  run_command_with_env.rs
src/macros/: command_line.rs  command_line_macros.rs  file_io.rs  generate_toml_macros.rs  mod.rs  toml.rs
src/models/: mod.rs  toml_model.rs
src/secret-detect/cmd/: detect.rs  protect.rs  root.rs  version.rs
src/secret-detect/cmd/generate/config/: main.rs
src/secret-detect/cmd/generate/config/rules/: adafruit.rs  adobe.rs  age.rs  airtable.rs  algolia.rs  alibaba.rs  asana.rs  atlassian.rs  authress.rs  aws.rs  beamer.rs  bitbucket.rs  bittrex.rs  clojars.rs  cloudflare.rs  codecov.rs  coinbase.rs  confluent.rs  contentful.rs  databricks.rs  datadog.rs  definednetworking.rs  digitalocean.rs  discord.rs  doppler.rs  droneci.rs  dropbox.rs  duffel.rs  dynatrace.rs  easypost.rs  etsy.rs  facebook.rs  fastly.rs  finicity.rs  finnhub.rs  flickr.rs  flutterwave.rs  frameio.rs  freshbooks.rs  gcp.rs  (+68 more)
src/secret-detect/cmd/generate/secrets/: regen.rs
src/secret-detect/config/: allowlist.rs  config.rs  mod.rs  rule.rs  utils.rs
src/secret-detect/detect/: baseline.rs
src/secret-detect/report/: csv.rs  finding.rs  json.rs  junit.rs  report.rs  sarif.rs
